deploy/kustomize/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: production
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - image: api
          imagePullPolicy: IfNotPresent
          name: api
          livenessProbe:
            httpGet:
              path: "/health"
              port: 1232
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: "/health"
              port: 1232
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "150m"
          ports:
            - containerPort: 1232
              protocol: TCP
