deploy/kustomize/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: production
  labels:
    app: api
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 1323
  selector:
    app: api
